[package]
name = "murgi_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rss = "2.0"
rand = "0.8.4"
tracing = "0.1.23"
tracing-subscriber = "0.2"
openssl = { version = "0.10.29", features = ["vendored"] }

[dependencies.songbird]
version = "0.2.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
features = ["client", "gateway", "standard_framework", "model", "cache", "voice", "rustls_backend"]

[dependencies.chrono]
version = "0.4.10"
default-features = false
features = ["clock"]
