[package]
name = "murgi_bot"
version = "0.1.0"
authors = ["Datta Adithya <dat.adithya@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
description = "A Jackett-wearing Murgi. The Discord Bot that gets you howls, DnD dice, and torrents."
readme = "README.md"
repository = "https://github.com/dat-adi/MurgiBot/"
license-file = "LICENSE"
keywords = ["discord", "bot", "torrents", "serenity"]
categories = ["web-programming::websocket"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
rss = "2.0"
rand = "0.8.4"
tracing = "0.1.23"
tracing-subscriber = "0.2"
openssl = { version = "0.10.29", features = ["vendored"] }

[dependencies.songbird]
version = "0.2.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.serenity]
version = "0.10.9"
features = ["client", "gateway", "standard_framework", "model", "cache", "voice", "rustls_backend"]

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = ["clock"]
